--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </div>
   </header>
 
-  <main>
+  <main class="container">
+
     <div class="card">
       <img src="ams.jpg" class="ams" alt="Adeesh's Portrait"><br>
       <strong>MODEL</strong>
