--- a/index.html
+++ b/index.html
@@ -5,58 +5,58 @@
     Spacing and layout
   -->
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Photography</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Photography</title>
+    <!-- Required meta tags -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-  <!-- Required meta tags -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS -->
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-  <!-- CSS -->
-  <link href="style.css" rel="stylesheet" />
-</head>
+  <body>
+    <header>
+      <div>
+        <h1>YETI5 STUDIOS</h1>
+      </div>
+    </header>
 
-<body>
-  <header>
-    <div>
-      <h1> YETI5 STUDIOS </h1>
-      <h5> - ADEESH SHRESTHA </h5>
-    </div>
-  </header>
+    <main class="container">
+      <div class="card">
+        <img src="ams.jpg" class="ams" alt="Adeesh's Portrait" /><br />
+        <strong>MODEL</strong>
+        <span>
+          ADEESH SHRESTHA
+        </span>
+      </div>
 
-  <main class="container">
+      <div class="card">
+        <img src="sagun1.jpg" class="ss" alt="Steve's Portrait" /><br />
+        <strong>MODEL</strong>
+        <span>
+          STEVE SMITH
+        </span>
+      </div>
 
-    <div class="card">
-      <img src="ams.jpg" class="ams" alt="Adeesh's Portrait"><br>
-      <strong>MODEL</strong>
-      <span>
-        ADEESH SHRESTHA
-      </span>
-    </div>
-
-
-    <div class="card">
-      <img src="sagun1.jpg" class="ss" alt="Steve's Portrait"><br>
-      <strong>MODEL</strong>
-      <span>
-        STEVE SMITH
-      </span>
-    </div>
-
-    <div class="card">
-      <img src="ag.jpg" class="ams" alt="Steve's Portrait"><br>
-      <strong>MODEL</strong>
-      <span>
-        ANTHONY GRIMES
-      </span>
-    </div>
-  </main>
-
-</body>
-
+      <div class="card">
+        <img src="ag.jpg" class="ams" alt="Anthony's Portrait" /><br />
+        <strong>MODEL</strong>
+        <span>
+          ANTHONY GRIMES
+        </span>
+      </div>
+    </main>
+  </body>
 </html>
